--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -105,7 +105,7 @@
             <div class="col-md-3">
                 <h5 class="link-text-decor pt-2">Contact</h5>
                 <hr class="bold-lines">
-                <a href="" class="link-text-decor">Email: customercare@airpostxpress.com</a>
+                <a href="mailto:airpostxpress@gmail.com" class="link-text-decor">Email: airpostxpress@gmail.com</a>
             </div>
             <div class="col-md-3">
                 <h5 class="link-text-decor pt-3">Have a business enquiry?</h5>
@@ -116,6 +116,7 @@
             </div>
             <br>
             <p class="link-text-decor text-center sm_in_sm">&#169; Copyright {{ today_date }} Airpost Xpress Courier Services - All Rights Reserved.</p>
+            <p class="link-text-decor text-center sm_in_sm">Design and developed by: Nayan</p>
         </div>
     </div>
     <!-- <hr class="mt-1">  -->
