Add new field in booking model

--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -17,6 +17,7 @@
                 $("#datetime").val(doc_data.doc_date);
                 $("#from_destination").val(doc_data.from_destination).change();
                 $("#party").val(doc_data.party_name).change();
+                $("#bookingtype").val(doc_data.booking_type).change();
                 $("#receiver_mobile").val(doc_data.receiver_mobile_number);
                 $("#receiver_name").val(doc_data.receiver_name);
                 $("#ref_courier_name").val(doc_data.ref_courier_name).change();
