add new column in bookingh type

--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}{% load static %}{% block title %}Booking{% endblock title %}{% block content %}
 
-<div class="container mt-5 back_color">
-    <div class="row mt-5">
+<div class="container back_color">
+    <div class="row">
         <div class="col-md-6 mt-3 border-dark">
             <h4 class="alert alert-primary text-center">Book your shipment</h4>
             <!--  url 'save_booking'  -->
