--- a/api/templates/tracking_history.html
+++ b/api/templates/tracking_history.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}{% block title %}Load IN{% endblock title %}{% block content %}
 
-<div class="container mt-5 back_color">
-    <div class="row mt-5">
+<div class="container back_color">
+    <div class="row">
         <div class="col-md-6">
             <h4 class="alert alert-primary mt-3 text-center">Load Input</h4>
             <form method="POST" action="" id="form1">
