--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %} {% block title %} Dashboard {% endblock title %}{% block content %}
-
+<!-- 
 <div class="container mt-5 alert alert-dark">
     <div class="row justify-content-center">
         <div class="col-md-6 text-center">
-            <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-outline-dark mt-3"><b>Booking</b></a>
-
-            <!-- <a href="url 'tracking_history'" class="text-decoration-none btn btn-outline-dark mt-3" target="_blank"><b>Tracking</b></a> -->
+            <a href="{% url 'bookings' %}" class="text-decoration-none btn btn-outline-dark mt-3"><b>Booking</b></a>            
             <div class="btn-group">
                 <button type="button" class="btn btn-outline-dark mt-3 dropdown-toggle nav_login_btn mx-0" data-bs-toggle="dropdown" aria-expanded="false">Tracking</button>
                 <ul class="dropdown-menu">
@@ -20,9 +18,8 @@
                 </ul>
             </div>
         </div>
-        <!-- <hr class="mt-3"> -->
     </div>
-</div>
+</div> -->
 
 <div class="container alert alert-dark">
     <div class="row justify-content-center">
