--- a/api/templates/party_master.html
+++ b/api/templates/party_master.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}{% load static %}{% block title %}Party master {% endblock title %}{% block content %}
-<div class="container mt-5 back_color">
+<div class="container back_color">
     <section>
         <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
@@ -24,7 +24,7 @@
             </div>
         </div>
     </section>
-    <div class="row mt-5">
+    <div class="row">
         <div class="col-md-6 mt-3 border-dark">
             <h4 class="alert alert-primary text-center">Add-Edit party details</h4>
             <!--  url 'save_booking'  -->
