Add new images in service sections

--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -17,11 +17,10 @@
             <h5 class="service_p">About Airpost Xpress</h5>
             <h2>Courier & Logistic Solutions</h2>
             <hr class="line_for_about_us">
-            <p class="mt-4">Courier and logistics services provide fast, reliable, and cost-effective solutions for businesses and individuals who need to send packages and goods. With a range of services that include local and international shipping, parcel delivery,
-                freight forwarding, and e-commerce solutions, courier companies are essential for businesses of all sizes that need to transport products to customers around the world. Air shipping is a particularly popular option for time-sensitive shipments,
-                as it offers the fastest delivery times and global reach. </p>
-            <p>In addition to shipping services, many courier companies also offer warehousing and fulfillment solutions, enabling businesses to store their products in secure facilities and handle all aspects of the order fulfillment process. Whether you're
-                shipping a single package or managing a complex logistics operation, courier and logistics services can help streamline your supply chain and ensure your products reach their destination safely and on time.</p>
+            <p class="mt-4">At Airpost Xpress, we offer a comprehensive range of courier and logistics services to help businesses of all sizes manage their transportation needs. Whether you need to ship a small package across town or manage the logistics of a complex
+                supply chain, we have the expertise and resources to help you succeed.</p>
+            <p>Our services include supply chain management, last-mile delivery, specialized handling, and customized solutions. We leverage advanced technology and innovative strategies to streamline operations and increase efficiency, while providing personalized
+                service and support to our customers. With a commitment to excellence and a focus on delivering results, we're the partner you can trust for all your courier and logistics needs.</p>
         </div>
         <div class="col-md-6 mt-4">
             <img src="{% static '\img\about_us_first.jpg' %}" alt="" class="img-fluid rounded-5">
@@ -36,10 +35,10 @@
             <h5 class="service_p">Work</h5>
             <h2>How We Work</h2>
             <hr class="line_for_about_us">
-            <p class="mt-4">Courier and logistics services operate by facilitating the transportation and delivery of packages from one location to another. When a customer places an order for shipping, the courier company prepares the package for shipment. The company
-                then arranges for transportation of the package, whether by land, air, or sea. During the transportation process, the customer can track the status of their shipment in real time. Once the package arrives at its destination, it is delivered
-                to the recipient's address by delivery staff. The courier company provides proof of delivery, such as an electronic signature or confirmation, to the customer. Throughout the entire process, the courier and logistics company is committed
-                to providing exceptional customer service to its customers.</p>
+            <p class="mt-4">At Airpost Xpress, we pride ourselves on our simple and streamlined process that makes it easy for our customers to ship their packages and manage their logistics needs.<br>Once the package is ready for pickup, our trained and professional
+                couriers will collect it and transport it securely to our sorting facility. Our advanced technology and automated sorting systems help to ensure fast and efficient processing, and our dedicated team monitors every package throughout its
+                journey to provide real-time updates on its status. Finally, our experienced last-mile delivery team will ensure that the package is delivered to its final destination safely and securely. We understand that every shipment is important,
+                and we work tirelessly to provide the highest level of service and support to every customer, every time.</p>
         </div>
     </div>
     <hr>
@@ -47,10 +46,10 @@
         <div class="col-md-3">
             <div class="row">
                 <div class="col-3 mt-3">
-                    <h1><i class="bi bi-truck text-danger"></i></h1>
+                    <h1><i class="bi bi-globe-central-south-asia text-danger"></i></h1>
                 </div>
                 <div class="col-9">
-                    <h1 class="text-danger">100+</h1>
+                    <h1 class="text-danger">12</h1>
                     <p>Countries and territories</p>
                 </div>
             </div>
@@ -69,7 +68,7 @@
         <div class="col-md-3">
             <div class="row">
                 <div class="col-3 mt-3">
-                    <h1><i class="bi bi-truck text-danger"></i></h1>
+                    <h1><i class="bi bi-diagram-3 text-danger"></i></h1>
                 </div>
                 <div class="col-9">
                     <h1 class="text-danger">100+</h1>
@@ -80,40 +79,42 @@
     </div>
     <hr>
 </div>
-<div class="container-fluid">
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-12 text-center mt-4">
             <h5 class="service_p">Team</h5>
             <h1>With a Professional Team</h1>
             <hr class="line_for">
-            <p>We take pride in our team of professionals who are dedicated to providing exceptional service to our customers.<br> Our team is made up of experienced logistics experts, drivers, and customer service representatives who are committed to ensuring
-                that every package is delivered <br>on time and in perfect condition. We believe that our team is the key to our success.</p>
+            <p>We're a team of experienced professionals dedicated to providing the fastest, most reliable shipping services to our customers. <br>With our state-of-the-art technology, we offer real-time package tracking and delivery updates to ensure your
+                package arrives at its destination<br> on time and in perfect condition. Whether you need same-day delivery, international shipping, or special handling and packaging,<br> Airpost Xpress is here to provide the best service possible.</p>
         </div>
     </div>
 
     <div class="row mt-5 justify-content-evenly">
-        <div class="col-md-6">
+        <div class="col-md-5">
             <div class="row back_color_about_us rounded-5">
-                <div class="col-md-6 px-0">
+                <!-- <div class="col-md-6 px-0">
                     <img src="{% static '\img\founder1.jpg' %}" alt="" class="img-fluid rounded-5">
-                </div>
-                <div class="col-md-6 px-3 mt-5">
-                    <h3>Ram Kumar</h3>
-                    <h6 class="text-danger mt-4">FOUNDER & CEO AIRPOST XPRESS</h6>
-                    <p class="mt-4">Ram Kumar is the founder of Airpost Xpress, one of the world's largest courier companies. He founded Airpost Xpress with the idea of creating a system for overnight delivery of packages.</p>
+                </div> -->
+                <div class="col-md-12 mt-3">
+                    <h3>Pulkit Jain</h3>
+                    <h6 class="text-danger mt-4">founder & CEO AIRPOST XPRESS</h6>
+                    <p class="mt-2">As a lifelong entrepreneur, I've always been passionate about finding innovative solutions to complex problems. At Airpost Xpress, my goal is to revolutionize the courier industry by providing fast, reliable, and affordable shipping
+                        service
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
             <div class="row back_color_about_us rounded-5">
-                <div class="col-md-6 px-0">
+                <!-- <div class="col-md-6 px-0">
                     <img src="{% static '\img\founder2.jpg' %}" alt="" class="img-fluid rounded-5">
-                </div>
-                <div class="col-md-6 px-3 mt-5">
-                    <h3>Shyam Kumar</h3>
-                    <h6 class="text-danger mt-4">FOUNDER & CEO AIRPOST XPRESS</h6>
-                    <p class="mt-4">Shyam Kumar is also the founder of Airpost Xpress, one of the world's largest courier companies. He founded this to start a small messenger service in India. His vision was to create a company that could deliver packages faster and
-                        more efficiently.</p>
+                </div> -->
+                <div class="col-md-12 mt-3">
+                    <h3>Nayan Kumar</h3>
+                    <h6 class="text-danger mt-4">Founder of AIRPOST XPRESS</h6>
+                    <p class="mt-2">I've always been driven by a desire to help others, and at Airpost Xpress, we're doing just that. By providing reliable and affordable shipping services, we're helping businesses and individuals connect with one another and make the
+                        world a smaller and more connected place.</p>
                 </div>
             </div>
         </div>
