--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -24,17 +24,18 @@
         <div class="row justify-content-around first_section">
             <div class="col-md-5 mt-5">
                 <h1>Welcome to Airpost Xpress</h1>
-                <h4>Your Trusted Partner</h4><br>
-                <p>With years of experience in the industry, we understand the importance of delivering your goods on time, every time.
+                <h4>Your Trusted Courier Partner</h4><br>
+                <p>With the years of experience in the industry, we understand the importance of delivering your goods on time, every time. At Airpost Xpress, we know that every customer is unique, which is why we offer customized solutions to meet your
+                    specific needs. Our goal is to make shipping and logistics as easy and stress-free as possible for our customers.
                     <br><br>We offer a wide range of services, including:
                     <ul>
-                        <li>Local and international shipping</li>
-                        <li>Parcel delivery</li>
-                        <li>Freight forwarding</li>
-                        <li>Customs brokerage</li>
-                        <li>Warehousing and distribution</li>
+                        <li>Local and international service</li>
+                        <li>Scheduled delivery</li>
+                        <li>Express delivery</li>
+                        <li>Same\Next day delivery *</li>
+                        <li>Special handling and packaging</li>
                     </ul>
-                    At Airpost Xpress, we know that every customer is unique, which is why we offer customized solutions to meet your specific needs. Our goal is to make shipping and logistics as easy and stress-free as possible for customer.
+
                 </p>
                 <!-- <img src="{% static 'img/home_img.png' %}" class="img-fluid" alt="AIRPOST XPRESS"> -->
             </div>
