--- a/api/templates/services.html
+++ b/api/templates/services.html
@@ -17,8 +17,10 @@
             <h5 class="service_p">We Provide</h5>
             <h1>Courier & Logistic Services</h1>
             <hr class="line_for">
-            <p>We provide fast, reliable, and cost-effective solutions for businesses and individuals who needs to send packages and goods, with wide range of services that include local and international shipping, parcel delivery, freight forwarding, and
-                e-commerce solutions, courier companies are essential for businesses of all sizes that needs to transport their products to customers around the world. </p>
+            <p>We specialize in delivering your packages on time and with care. With our state-of-the-art technology, experienced team, and dedication to customer satisfaction,<br> we make shipping easy and stress-free. Whether you need same-day delivery
+                across town or international shipping across the globe, we've got you covered.<br> At Airpost Xpress, we are committed to providing the highest quality service at an affordable price.<br>Contact us today to experience the Airpost Xpress
+                difference
+            </p>
         </div>
 
     </div>
@@ -28,12 +30,12 @@
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">AIRPOST XPRESS SPECIAL</h5>
-            <p class="mt-3 px-1">We provide time bound service with money back gaurantee.</p>
+            <p class="mt-3 px-1">We offer same-next day airpost xpress special delivery services.</p>
         </div>
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
-            <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
+            <img src="{% static '\img\services_by_air.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">BY AIR</h5>
-            <p class="mt-3 px-1">At our courier and logistics company, we offer air services to provide our customers with fast and reliable shipping options for their packages.</p>
+            <p class="mt-3 px-1">We offer air services to provide our customers with fast and reliable shipping options for their packages.</p>
         </div>
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
             <img src="{% static '\img\surface.jpg' %}" alt="" class="img-fluid mt-2 img-border">
@@ -50,12 +52,12 @@
             <p class="mt-3 px-1">We understand that convenience is key when it comes to shipping packages, which is why we offer door-to-door services to make shipping as easy and stress-free as possible. </p>
         </div>
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
-            <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
+            <img src="{% static '\img\ecom_service.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">E-COMMERCE</h5>
             <p class="mt-3">Our e-commerce services are designed to integrate seamlessly with your online store, providing you with a hassle-free shipping solution.</p>
         </div>
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
-            <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
+            <img src="{% static '\img\international.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">INTERNATIONAL SERVICE</h5>
             <p class="mt-3">We provide these services to meet the needs of customers, including express delivery for urgent shipments, economy delivery for less time-sensitive items, and tracking and insurance for added security.</p>
         </div>
