--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -28,7 +28,9 @@
                 // alert(doc_data.to_destination);
                 $("#cnotenumber").focus();
                 $("#cnotenumber").val(doc_data.c_note_number);
-
+                $("#amount").val(doc_data.amount);
+                $("#remarks").val(doc_data.remarks);
+                $("#weight").val(doc_data.weight);
             },
         });
     });
