--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -121,9 +121,27 @@
                     </div>
                     <div class="col-md-6 mt-2">
                         <label for="receiver_mobile"><b>Ref. Courier Number</b></label>
-                        <input type="text" name="ref_number" id="ref_courier_number" class="form-control" placeholder="Sender Mobile Number">
+                        <input type="text" name="ref_number" id="ref_courier_number" class="form-control" placeholder="">
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-md-6 mt-2">
+                        <label for="weight"><b>Weight in gms</b></label>
+                        <input type="number" name="weight" id="weight" class="form-control" placeholder="">
+                    </div>
+                    <div class="col-md-6 mt-2">
+                        <label for="amount"><b>Amount</b></label>
+                        <input type="number" name="amount" id="amount" class="form-control" placeholder="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 mt-2">
+                        <label for="remarks"><b>Remarks</b></label>
+                        <textarea class="form-control" id="remarks" name="remarks" rows="2"></textarea>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-12 text-center mt-3 mb-3">
                         <!-- <input type="button" class="btn btn-success" value="Book Shipment" id="bookshipment"> -->
