--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -100,7 +100,7 @@
                     <h3>Pulkit Jain</h3>
                     <h6 class="text-danger mt-4">founder & CEO AIRPOST XPRESS</h6>
                     <p class="mt-2">As a lifelong entrepreneur, I've always been passionate about finding innovative solutions to complex problems. At Airpost Xpress, my goal is to revolutionize the courier industry by providing fast, reliable, and affordable shipping
-                        service
+                        services.
                     </p>
                 </div>
             </div>
@@ -112,14 +112,13 @@
                 </div> -->
                 <div class="col-md-12 mt-3">
                     <h3>Nayan Kumar</h3>
-                    <h6 class="text-danger mt-4">Founder of AIRPOST XPRESS</h6>
+                    <h6 class="text-danger mt-4">Tech. Strategic Advisor</h6>
                     <p class="mt-2">I've always been driven by a desire to help others, and at Airpost Xpress, we're doing just that. By providing reliable and affordable shipping services, we're helping businesses and individuals connect with one another and make the
-                        world a smaller and more connected place.</p>
+                        world a smaller and more connected place with the help of technology.</p>
                 </div>
+
             </div>
         </div>
     </div>
 </div>
-
-
-{% endblock content %}
+<br> {% endblock content %}
