delivery boy details page setup

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -102,7 +102,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="{% url 'area_master' %}">Area Master</a></li>
-                        <li><a class="dropdown-item" href="{% url 'part_master' %}">Delivery boy Master</a></li>
+                        <li><a class="dropdown-item" href="{% url 'delivery_boy_master' %}">Delivery boy Master</a></li>
 
                     </ul>
                 </div>
