--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -26,6 +26,7 @@
                 {% if message %}
                 <p class="text-danger text-center">{{ message }}</p>
                 {% endif %}
+                <a class="text-decoration-none float-end" href="superadminlogin/">Admin login</a>
             </form>
         </div>
     </div>
