--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -19,7 +19,7 @@
             <hr class="line_for_about_us">
             <p class="mt-4">At Airpost Xpress, we offer a comprehensive range of courier and logistics services to help businesses of all sizes manage their transportation needs. Whether you need to ship a small package across town or manage the logistics of a complex
                 supply chain, we have the expertise and resources to help you succeed.</p>
-            <p>Our services include supply chain management, last-mile delivery, specialized handling, and customized solutions. We leverage advanced technology and innovative strategies to streamline operations and increase efficiency, while providing personalized
+            <p class="scroll-animation">Our services include supply chain management, last-mile delivery, specialized handling, and customized solutions. We leverage advanced technology and innovative strategies to streamline operations and increase efficiency, while providing personalized
                 service and support to our customers. With a commitment to excellence and a focus on delivering results, we're the partner you can trust for all your courier and logistics needs.</p>
         </div>
         <div class="col-md-6 mt-4">
@@ -27,7 +27,7 @@
         </div>
 
     </div>
-    <div class="row mt-5 back_color_about_us rounded-start-5">
+    <div class="row mt-5 back_color_about_us rounded-start-5 scroll-animation">
         <div class="col-md-6 px-0">
             <img src="{% static '\img\how_we_work.jpg' %}" alt="" class="img-fluid rounded-5">
         </div>
@@ -42,7 +42,7 @@
         </div>
     </div>
     <hr>
-    <div class="row justify-content-evenly mt-5 mb-4">
+    <div class="row justify-content-evenly mt-5 mb-4 scroll-animation">
         <div class="col-md-3">
             <div class="row">
                 <div class="col-3 mt-3">
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="row">
+            <div class="row ">
                 <div class="col-3 mt-3">
                     <h1><i class="bi bi-truck text-danger"></i></h1>
                 </div>
@@ -80,7 +80,7 @@
     <hr>
 </div>
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center scroll-animation">
         <div class="col-12 text-center mt-4">
             <h5 class="service_p">Team</h5>
             <h1>With a Professional Team</h1>
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <div class="row mt-5 justify-content-evenly">
+    <div class="row mt-5 justify-content-evenly scroll-animation">
         <div class="col-md-5">
             <div class="row back_color_about_us rounded-5">
                 <!-- <div class="col-md-6 px-0">
@@ -121,4 +121,18 @@
         </div>
     </div>
 </div>
-<br> {% endblock content %}
+<br>
+<script>
+    $(window).scroll(function() {
+        $('.scroll-animation').each(function() {
+            var position = $(this).offset().top;
+            var scroll = $(window).scrollTop();
+            var windowHeight = $(window).height();
+            if (scroll > position - windowHeight + 50) {
+                $(this).addClass('animate');
+            }
+        });
+    });
+</script>
+
+{% endblock content %}
