--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -128,11 +128,11 @@
                 <div class="row">
                     <div class="col-md-6 mt-2">
                         <label for="weight"><b>Weight in gms</b></label>
-                        <input type="number" name="weight" id="weight" class="form-control" placeholder="">
+                        <input type="number" name="weight" id="weight" class="form-control" placeholder="" value="0">
                     </div>
                     <div class="col-md-6 mt-2">
                         <label for="amount"><b>Amount</b></label>
-                        <input type="number" name="amount" id="amount" class="form-control" placeholder="">
+                        <input type="number" name="amount" id="amount" class="form-control" placeholder="" value="0">
                     </div>
                 </div>
                 <div class="row">
