--- a/api/templates/drs_generate.html
+++ b/api/templates/drs_generate.html
@@ -88,19 +88,14 @@
                             </tbody>
                         </table>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
-</div>
-<hr>
-<div class="row mt-3">
-    <div class="col">
-        <button type="button" class="btn btn-success btn-lg " style="height: auto; width: auto">Save</button>
-        <button type="button" class="btn btn-success btn-lg " style="height: auto; width: auto">Save &
-                Print</button>
+    <div class="row mt-3 justify-content-center">
+        <div class="col-12 text-center mb-3">
+            <button type="button" class="btn btn-success" id="save_drs">Save</button>
+        </div>
     </div>
-</div>
 </div>
 {% include 'drs_ajax.html' %} {% endblock content %}
