--- a/api/templates/drs.html
+++ b/api/templates/drs.html
@@ -1,6 +1,27 @@
 {% extends 'base.html' %}{% block title %}DRS{% endblock title %}{% load static %}{% block content %}
 
 <div class="container">
+
+    <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Delete Confirmation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-6">
             <!-- <h4 class="alert alert-primary text-center">DRS Details</h4> -->
@@ -21,12 +42,12 @@
                 <div class="card-body">
                     <div class="col-12">
                         <div class="scrollme">
-                            <table class="table table-striped table-responsive">
+                            <table class="table table-striped table-responsive" id="table-1">
                                 <tbody>
                                     <tr>
                                         <th>Date</th>
                                         <th>DRS No.</th>
-                                        <th>Deliveryboy</th>
+                                        <th>Delivery boy</th>
                                         <th>Qty</th>
                                         <th>Action</th>
                                         <th>Status</th>
@@ -37,7 +58,12 @@
                                         <td>{{ drs.drs_no }}</td>
                                         <td>{{ drs.deliveryboy_name }}</td>
                                         <td>{{ drs.total_docs }}</td>
-                                        <td>edit, update, delete, print</td>
+                                        <td>
+                                            <button type='button' id='edit_button' class='border-0 bg-transparent text-primary editButton' data-sid="{{ drs.id }}" title="Edit DRS"><i class="bi bi-pencil"></i></button>
+                                            <button type='button' id='upload_button' class='border-0 bg-transparent text-primary uploadButton' data-sid="{{ drs.id }}" title="Upload DRS"><i class="bi bi-upload"></i></button>
+                                            <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-bs-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button>
+                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.id }}" title="Print DRS"><i class="bi bi-printer"></i></button>
+                                        </td>
                                         <td>Pending</td>
                                     </tr>
                                     {% endfor %}
@@ -61,19 +87,19 @@
                                     <tr>
                                         <th>Date</th>
                                         <th>DRS No.</th>
-                                        <th>Deliveryboy</th>
+                                        <th>Delivery boy</th>
                                         <th>Qty</th>
-                                        <th>Action</th>
                                         <th>Status</th>
                                     </tr>
+                                    {% for drs in today_drs_details %}
                                     <tr>
-                                        <td>2023-05-21</td>
-                                        <td>123456</td>
-                                        <td>Ram kumar</td>
-                                        <td>15</td>
-                                        <td>edit, update, delete, print</td>
-                                        <td>Pending</td>
+                                        <td>{{ drs.date|date:"d-b-Y" }}</td>
+                                        <td>{{ drs.drs_no }}</td>
+                                        <td>{{ drs.deliveryboy_name }}</td>
+                                        <td>{{ drs.total_docs }}</td>
+                                        <td>{{ drs.status }}</td>
                                     </tr>
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
@@ -83,5 +109,4 @@
         </div>
     </div>
 </div>
-
-{% endblock content %}
+{% include 'drs_list_ajax.html' %} {% endblock content %}
