added delete modal remove bs only

--- a/api/templates/drs.html
+++ b/api/templates/drs.html
@@ -61,7 +61,7 @@
                                         <td>
                                             <button type='button' id='edit_button' class='border-0 bg-transparent text-primary editButton' data-sid="{{ drs.id }}" title="Edit DRS"><i class="bi bi-pencil"></i></button>
                                             <button type='button' id='upload_button' class='border-0 bg-transparent text-primary uploadButton' data-sid="{{ drs.id }}" title="Upload DRS"><i class="bi bi-upload"></i></button>
-                                            <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-bs-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button>
+                                            <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button>
                                             <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.id }}" title="Print DRS"><i class="bi bi-printer"></i></button>
                                         </td>
                                         <td>Pending</td>
