delete button working successfully

--- a/api/templates/drs.html
+++ b/api/templates/drs.html
@@ -16,7 +16,10 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                    <form id="delete_btn_form">
+                        {% csrf_token %}
+                        <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                    </form>
                 </div>
             </div>
         </div>
